# face_eye_detector

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: detector.sh
.github/workflows/: test.yaml
detect/: main.cpp
detector_lib/: EyesDetector.cpp  EyesDetector.hpp  FaceDetector.cpp  FaceDetector.hpp
include/: EyesDetector.hpp  FaceDetector.hpp
src/: EyesDetector.cpp  FaceDetector.cpp  main.cpp
test/: TestEyesDetector.cpp  TestFaceDetector.cpp
